# Human_Resource_Management_System

./: .env  .gitignore  AI_IMPLEMENTATION_COMPLETE.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  EMPLOYEE_MANAGEMENT_IMPLEMENTATION_COMPLETE.md  FEEDBACK_PAYSLIPS_IMPLEMENTATION_COMPLETE.md  HIERARCHY_DEPARTMENTS_HOLIDAYS_IMPLEMENTATION_COMPLETE.md  MILESTONE4_SUMMARY.md  README.md  REMAINING_APIS_ANALYSIS.md  TestCases.md  hr_system bkp.db  hr_system.db  milestone4.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  test_performance_date_filter.py  testfixes.md  ultra_readme.md
backend/: .gitignore  AI_SERVICES_README.md  API_DOCUMENTATION_MILESTONE4.md  OPENAPI_YAML_GUIDE.md  README_MILESTONE4.md  config.py  database.py  fix_db_schema.py  generate_openapi_yaml.py  hr_system.db  main.py  models.py  openapi.yaml  openapi_milestone4.yaml  pydantic_models.py  requirements.txt  requirements_ai.txt  requirements_ai_performance.txt  seed_comprehensive.py  seed_data.py  setup.ps1  test_ai_apis_comprehensive.py  test_ai_endpoints.py  test_all_apis.py  test_api.py  test_api_enhanced.py  test_swagger_tags.py  verify_setup.py
docs/: 00_DOCUMENTATION_INDEX.md  01_README.md  02_PROJECT_STRUCTURE.md  03_QUICK_START.md  04_BACKEND_README.md  05_BACKEND_API_ANALYSIS.md  09_ROLE_ALIGNMENT.md  10_AUTH_API_DOCUMENTATION.md  12_AUTH_INTEGRATION_SUMMARY.md  13_AUTH_INTEGRATION_COMPLETE.md  14_AUTHENTICATION_COMPLETE.md  15_QUICK_AUTH_REFERENCE.md  16_QUICK_START_AUTH_TESTING.md  17_STEP_1.md  18_STEP_1_COMPLETION_SUMMARY.md  19_NEXT_STEPS.md  20_DASHBOARD_API_DOCUMENTATION.md  21_DASHBOARD_IMPLEMENTATION_SUMMARY.md  22_DASHBOARD_QUICK_START_GUIDE.md  23_FRONTEND_FIXES_APPLIED.md  AI_SERVICES_COMPLETE_GUIDE.md  API_PRIORITY_MATRIX.md  ATTENDANCE_ERRORS_FIX.md  COMPLETE_DASHBOARD_ANALYSIS.md  DASHBOARD_FIX_SUMMARY.md  (+16 more)
(+263 files in other folders)
