[project]
name = "soft-engg-project-sep-2025-se-sep-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.0",
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "fastapi-cors==0.0.6",
    "httpx==0.25.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.5.0",
    "pydantic-settings>=2.2.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dateutil==2.8.2",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
    "requests>=2.32.5",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.11",
    "langchain-text-splitters>=0.0.1",
    "faiss-cpu>=1.7.4",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.16.3",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "google-generativeai>=0.3.0",
    "pypdf>=6.4.0",
]
